# mycroft

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/mycroft-cli/: Cargo.toml
crates/mycroft-cli/src/: args.rs  config_file.rs  exit.rs  logging.rs  main.rs  output.rs  progress.rs
crates/mycroft-cli/tests/: cli.rs
crates/mycroft-core/: Cargo.toml
crates/mycroft-core/src/: config.rs  error.rs  event.rs  github.rs  lib.rs  planner.rs  result.rs  scan.rs  subject.rs  twostep.rs  username.rs  util.rs
crates/mycroft-core/src/detect/: cache.rs  classifier.rs  evidence.rs  fingerprint.rs  mod.rs  score.rs  signals.rs
crates/mycroft-core/src/net/: fetch.rs  mod.rs  reqwest_executor.rs  ssrf_guard.rs
crates/mycroft-core/src/scheduler/: circuit_breaker.rs  host_limiter.rs  mod.rs  task_runner.rs
crates/mycroft-core/tests/: detection.rs  github.rs  scheduler.rs
crates/mycroft-manifest/: Cargo.toml
crates/mycroft-manifest/examples/: gen_schema.rs
crates/mycroft-manifest/src/: addr.rs  import_catalog.rs  lib.rs  load.rs  migrate.rs  schema.rs  template.rs  validate.rs
crates/mycroft-manifest/tests/: import.rs
manifests/: sites.v1.json
schemas/: mycroft-manifest.v1.schema.json
