[package]
name = "mycroft-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core scan planning, scheduling, networking, and detection engine for mycroft"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
fancy-regex = "0.18.0"
governor = "0.10.4"
md-5 = "0.10.6"
mycroft-manifest = { version = "0.1.0", path = "../mycroft-manifest" }
percent-encoding = "2.3.2"
sha2 = "0.10.9"
rand = "0.10.1"
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls", "gzip", "brotli", "deflate", "socks", "stream", "json", "charset", "http2"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_json_path = "0.7.2"
thiserror = "2.0.18"
time = { version = "0.3.45", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "io-util"] }
tokio-util = "0.7.18"
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["test-util", "macros", "rt-multi-thread"] }
