[package]
name = "mycroft-manifest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Site manifest schema, validation, and catalog import for mycroft"

[lints]
workspace = true

[dependencies]
fancy-regex = "0.18.0"
regex = "1.12.4"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
url = { version = "2.5.8", features = ["serde"] }
